--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,17 @@ build-stamp
 configure-stamp
 debian/files
 debian/libphp-pgq*
+
+# OS or Editor folders
+.DS_Store
+._*
+Thumbs.db
+.cache
+.project
+.settings
+.tmproj
+*.esproj
+nbproject
+*.sublime-project
+*.sublime-workspace
+.idea
